# Rental-Test-Task

./: .gitignore  README.md  manage.py  pyproject.toml  pytest.ini
apps/rental/: admin.py  factories.py  models.py  tests.py  urls.py  views.py
apps/rental/migrations/: 0001_initial.py
apps/rental/static/rental/css/: reservations.css
apps/rental/templates/rental/: reservations.html
rental_test_task/: asgi.py  local_settings.py.example  settings.py  test_settings.py  urls.py  wsgi.py
