[tool.poetry]
name = "rental-test-task"
version = "0.1.0"
description = ""
authors = ["Niall Coleman-Clarke"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.7.5"
django = "3.2.5"
psycopg2 = "^2.9.3"
dj-database-url = "^0.5.0"
whitenoise = "^6.0.0"

[tool.poetry.dev-dependencies]
factory-boy = "^3.2.1"
pytest-django = "^4.5.2"
django-debug-toolbar = "^3.2.4"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
